# glxgears

./: .gitignore  CMakeLists.txt  Makefile  configure.ac  glxgears.Tpo
src/: CMakeLists.txt  Makefile.in
src/demos/: Makefile.cygnus  pixeltest.c
src/egl/eglut/: eglut_wayland.c
src/egl/opengles1/: drawtex.c
src/glsl/: .gitignore  CMakeLists.txt  geom-outlining-150.c  gsraytrace.cpp
src/objviewer/: glmdraw.c
src/tests/: .gitignore  CMakeLists.txt  Makefile.am  backspecular.c
src/tools/: CMakeLists.txt  dds.c
src/trivial/: .gitignore  CMakeLists.txt  Makefile.am
src/wgl/: CMakeLists.txt  wglinfo.c  wglutil.c  wglutil.h  wincopy.c
src/xdemos/: CMakeLists.txt  Makefile  Makefile.am  glinfo_common.c  glinfo_common.h  glxinfo.c
